fix mobile search z-index issue

--- a/css/modules/_zindex.scss
+++ b/css/modules/_zindex.scss
@@ -4,6 +4,7 @@ $zindex: (
   dropdown  : 7000,
   header    : 6000,
   dropdown-body: 5500,
+  dropdown-body-secondary: 5250, 
   footer    : 5000,
   main      : 4000
 );
